--- a/robot_room_cleaner/robot_room_cleaner.ipynb
+++ b/robot_room_cleaner/robot_room_cleaner.ipynb
@@ -89,7 +89,14 @@
     "        Clean the current cell.\n",
     "        :rtype void\n",
     "        \"\"\"\n",
-    "        self.room[self.row][self.col] = 'C'\n"
+    "        self.room[self.row][self.col] = 'C'\n",
+    "        \n",
+    "    \n",
+    "    def show_room(self):\n",
+    "        room = [[col for col in row] for row in self.room]\n",
+    "        room[self.row][self.col] = 'R'\n",
+    "        print('\\n'.join(''.join(str(col) for col in row) for row in room))\n",
+    "        print()\n"
    ]
   },
   {
@@ -98,17 +105,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "UNIT_VECTORS = (\n",
+    "    (-1, 0), \n",
+    "    (0, 1), \n",
+    "    (1, 0), \n",
+    "    (0, -1)\n",
+    ")\n",
+    "\n",
     "class Solution:\n",
+    "\n",
     "    def __init__(self):\n",
-    "        self.row, self.col = 0, 0 # arbitrary origin\n",
-    "        self.dir = (-1, 0)  # up\n",
+    "        self.pos = (0, 0) # arbitrary origin\n",
+    "        self.dir = 0 # arbitrary direction\n",
     "        self.cleaned = set()\n",
     "\n",
     "    def cleanRoom(self, robot):\n",
-    "        \"\"\"\n",
-    "        :type robot: Robot\n",
-    "        :rtype: None\n",
-    "        \"\"\""
+    "        \n",
+    "        # clean current position\n",
+    "        robot.clean()  \n",
+    "        self.cleaned.add(self.pos)\n",
+    "        \n",
+    "        # clean adjacent positions\n",
+    "        for _ in range(4):\n",
+    "            prev_pos = self.pos\n",
+    "            vector = UNIT_VECTORS[self.dir]\n",
+    "            next_pos = (prev_pos[0] + vector[0], prev_pos[1] + vector[1])\n",
+    "            if next_pos not in self.cleaned and robot.move():\n",
+    "                self.pos = next_pos\n",
+    "                self.cleanRoom(robot)\n",
+    "                \n",
+    "                robot.turnRight()\n",
+    "                robot.turnRight()\n",
+    "                robot.move()\n",
+    "                robot.turnLeft()\n",
+    "                robot.turnLeft()\n",
+    "                \n",
+    "                self.pos = prev_pos # return to original position and direction\n",
+    "\n",
+    "\n",
+    "            robot.turnRight()\n",
+    "            self.dir = (self.dir + 1) % 4\n",
+    "        "
    ]
   },
   {
@@ -117,74 +154,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Solution().cleanRoom(Robot())"
+    "robot = Robot()\n",
+    "solution = Solution()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111011\n",
+      "111R1011\n",
+      "10111111\n",
+      "00010000\n",
+      "11111111\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "robot = Robot()"
+    "robot.show_room()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 1, 1, 1, 1, 0, 1, 1],\n",
-       " [1, 1, 1, 1, 1, 0, 1, 1],\n",
-       " [1, 0, 1, 1, 1, 1, 1, 1],\n",
-       " [0, 0, 0, 1, 0, 0, 0, 0],\n",
-       " [1, 1, 1, 1, 1, 1, 1, 1]]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "robot.room"
+    "solution.cleanRoom(robot)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CCCCC0CC\n",
+      "CCCRC0CC\n",
+      "C0CCCCCC\n",
+      "000C0000\n",
+      "CCCCCCCC\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "robot.clean()"
+    "robot.show_room()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 1, 1, 1, 1, 0, 1, 1],\n",
-       " [1, 1, 1, 'C', 1, 0, 1, 1],\n",
-       " [1, 0, 1, 1, 1, 1, 1, 1],\n",
-       " [0, 0, 0, 1, 0, 0, 0, 0],\n",
-       " [1, 1, 1, 1, 1, 1, 1, 1]]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "robot.room"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
