--- a/robot_room_cleaner/robot_room_cleaner.ipynb
+++ b/robot_room_cleaner/robot_room_cleaner.ipynb
@@ -138,12 +138,12 @@
     "                robot.turnRight()\n",
     "                robot.move()\n",
     "                robot.turnLeft()\n",
-    "                robot.turnLeft()\n",
     "                \n",
-    "                self.pos = prev_pos # return to original position and direction\n",
+    "                self.pos = prev_pos # return to original position and facing to the right\n",
     "\n",
     "\n",
-    "            robot.turnRight()\n",
+    "            else:\n",
+    "                robot.turnRight()\n",
     "            self.dir = (self.dir + 1) % 4\n",
     "        "
    ]
